--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 .navbar {
   background-color: #004110;
   color: #fff;
-  padding: 1rem;
+  padding: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
