--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,11 @@
 }
 
 .logo {
-  font-size: 2rem; 
-  font-weight: bold;
+  border-radius: 10%;
+  -webkit-border-radius: 10%;
+  -moz-border-radius: 10%;
+  -ms-border-radius: 10%;
+  -o-border-radius: 10%;
 }
 
 .nav-links {
