--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body{
 }
 
 .container {
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -175,7 +176,13 @@ hr{
   .menu-toggle {
     display: block;
   }
-
+.logo{
+  width: 20%;
+  height: 20%;
+}
+#root > div > nav > div > ul{
+  margin: 0 !important;
+}
   .nav-links {
     display: none;
     flex-direction: column;
