--- a/src/index.css
+++ b/src/index.css
@@ -289,7 +289,7 @@ h3 {
 /* Energie page */
 .energie-container {
   position: relative;
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('energie\ bg.jpg') center/cover no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/energie\ bg.jpg') center/cover no-repeat;
   height: 80vh; 
   width: 100vw;
   display: flex; 
@@ -310,7 +310,7 @@ h3 {
 .light-bulb{
   height: 65vh;
   width: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('light.jpg') center/cover no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/light.jpg') center/cover no-repeat;
   background-attachment: fixed;
 }
 
