--- a/src/index.css
+++ b/src/index.css
@@ -310,8 +310,8 @@ h3 {
 .light-bulb{
   height: 65vh;
   width: 100%;
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/light.jpg') center/cover no-repeat;
-  background-attachment: fixed;
+  /* background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/light.jpg') center/cover no-repeat; */
+  /* background-attachment: fixed; */
 }
 
 /* Animation */
@@ -471,7 +471,7 @@ h3 {
   }
   .Photovoltaik-section{
     flex-direction: column;
-    padding: 50px;
+    padding: 10px;
   }
   h2{
     font-size: 24px;
@@ -507,6 +507,7 @@ h3 {
 }
 .Photovoltaik-img{
   width: 100%;
+  text-align: center;
 }
 .light-bulb{
   height: 40vh;
