--- a/src/pages/6-contact/contact.css
+++ b/src/pages/6-contact/contact.css
@@ -86,3 +86,21 @@
   border: none;
   border-radius: 10px;
 }
+@media (max-width:768px){
+  .contact-content{
+    flex-direction: column;
+    padding: 0;
+    width: 100%;
+    margin: auto;
+  }
+  .input-field, .textarea-field{
+    width: auto;
+    padding-inline: 20px;
+  }
+  .submit-btn{
+    width: 100%;
+  }
+  .contact-image {
+    max-width: 500px;
+  }
+}
