--- a/src/index.css
+++ b/src/index.css
@@ -541,7 +541,7 @@ h3 {
   border-bottom: 2px solid #f39c12;
 }
 .carousel-image{
-  max-height: 500px !important;
+  max-height: 500px;
 }
 .language-dropdown{
   padding: 0px 10px !important;
@@ -709,7 +709,7 @@ h3 {
   max-width: 90%;
 }
 .carousel-image{
-  height: 100vh !important;
+  min-height: 100vh;
 }
 .carousel-description{
 height: 60px;
@@ -718,6 +718,24 @@ max-width: 300px;
 }
 .electro{
   flex-direction: column-reverse;
+}
+.carousel-title{
+  font-size: 2.5rem;
+}
+
+.carousel-caption{
+  font-size: .9rem ;
+  line-height: 1;
+  height: auto;
+  width: 80%;
+  text-align: left;
+}
+.carousel-label{
+  font-size: 14px;
+}
+.carousel-control-prev-icon::after,
+.carousel-control-next-icon::after{
+  font-size: 2rem !important;
 }
 }
 
