--- a/src/index.css
+++ b/src/index.css
@@ -474,6 +474,20 @@ h3 {
   color: #fff;
   font-size: 24px;
 }
+.fade-in {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.4s ease-out;
+  -webkit-transition: all 0.6s ease-out;
+  -moz-transition: all 0.4s ease-out;
+  -ms-transition: all 0.4s ease-out;
+  -o-transition: all 0.4s ease-out;
+}
+
+.fade-in.show {
+  opacity: 1;
+  transform: translateY(0);
+}
 
 /* Responsive styles */
 .menu-toggle {
