--- a/src/pages/3-scrollToTop/scrollToTop.css
+++ b/src/pages/3-scrollToTop/scrollToTop.css
@@ -1,26 +1,54 @@
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2); 
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(100px); 
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0); 
+    opacity: 1;
+  }
+}
+
+
 .scroll-to-top {
     position: fixed;
     bottom: 20px;
     right: 20px;
     width: 50px;
     height: 50px;
-    background-color: #004110; /* لون الخلفية */
-    color: #fff; /* لون النص */
+    background-color: #5E8048;
+    color: #fff;
     border: none;
-    border-radius: 50%; /* جعل الزر دائري */
-    font-size: 24px; /* حجم النص */
+    border-radius: 50%;
+    font-size: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* ظل خفيف */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: opacity 0.3s ease, transform 0.3s ease;
-    z-index: 1000; /* وضع الزر فوق المحتوى */
-    opacity: 0.8; /* شفافية خفيفة */
-  }
-  
-  .scroll-to-top:hover {
-    opacity: 1; /* شفافية كاملة عند التمرير */
-    transform: scale(1.1); /* تكبير الزر عند التمرير */
-  }
-  
+    z-index: 1000;
+    opacity: .9;
+    animation: slideIn 0.5s ease-out, pulse 1.5s infinite;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.scroll-to-top:hover {
+    opacity: 1;
+    transform: scale(1.3); /* تأثير عند تمرير الماوس */
+}
