--- a/src/index.css
+++ b/src/index.css
@@ -582,28 +582,27 @@ max-width: 300px;
   }
 }
 /* Navbar Styling */
-.navbar {
+.navbar1 {
   background-color: #ffffff; 
-  color: #698C46; 
-  padding: 1rem 1.5rem;
+  color: #698C46;
+  padding: 0px 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  position: sticky;
-  top: 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: relative;
   z-index: 1000;
 }
-.navbar>.container{
-  flex-wrap: nowrap !important;
-}
-.navbar .logo {
+
+
+.logo {
   width: 150px;
+  margin-inline: 3rem; 
 }
 
 .menu-toggle {
-  font-size: 1.5rem;
-  color: #698C46; 
+  font-size: 1.8rem;
+  color: #698C46;
   background: none;
   border: none;
   cursor: pointer;
@@ -612,8 +611,9 @@ max-width: 300px;
 
 .nav-links {
   display: flex;
+  align-items: center;
   list-style: none;
-  gap: 1.5rem;
+  gap: 2rem; 
   transition: transform 0.3s ease-in-out;
 }
 
@@ -621,6 +621,7 @@ max-width: 300px;
   text-decoration: none;
   color: #698C46; 
   font-weight: 500;
+  font-size: 1.1rem;
   transition: color 0.3s ease, border-bottom 0.3s ease;
 }
 
@@ -633,9 +634,6 @@ max-width: 300px;
   color: #F1B703; 
 }
 
-.language-switcher {
-  position: relative;
-}
 
 .language-dropdown {
   padding: 0.5rem 1rem;
@@ -645,12 +643,13 @@ max-width: 300px;
   color: #698C46;
   cursor: pointer;
   font-size: 1rem;
-  transition: border-color 0.3s ease;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 .language-dropdown:focus,
 .language-dropdown:hover {
-  border-color: #F1B703; 
+  border-color: #F1B703;
+  box-shadow: 0 0 5px rgba(241, 183, 3, 0.5); 
 }
 
 /* Mobile Menu */
@@ -659,17 +658,21 @@ max-width: 300px;
     display: block;
   }
 
+  .logo{
+    width: 120px;
+    margin-inline: 0;
+  }
   .nav-links {
     position: absolute;
     top: 100%;
     right: 0;
     flex-direction: column;
-    background-color: #ffffff; 
+    background-color: #ffffff;
     width: 100%;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.3s ease-in-out;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
   .nav-links.active {
@@ -680,5 +683,14 @@ max-width: 300px;
     padding: 0.75rem 1rem;
     text-align: center;
   }
-}
 
+  .language-switcher {
+    margin-top: 1rem; 
+    display: block; 
+  }
+
+  .language-dropdown {
+    width: 90%;
+    margin: 0 auto; 
+  }
+}
