--- a/src/index.css
+++ b/src/index.css
@@ -267,8 +267,9 @@ footer {
 }
 
 .Photovoltaik-img img {
-  width: 100%;
-  max-height: 500px; /* حجم كبير نسبيًا */
+  width: 80%;
+  min-height: 400px; 
+  max-height: 400px; 
   border-radius: 12px;
   box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
   transition: all 0.5s ease;
@@ -333,7 +334,7 @@ h3 {
 .energie-container {
   position: relative;
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('/energie\ bg.jpg') center/cover no-repeat;
-  height: 80vh; 
+  height: 100%; 
   width: 100vw;
   display: flex; 
 }
