--- a/src/pages/7-fima/services.css
+++ b/src/pages/7-fima/services.css
@@ -1,13 +1,16 @@
 .company-container {
-    font-family: Arial, sans-serif;
     padding: 20px;
     background-color: #f9f9f9;
     color: #333;
   }
   
   .company-header {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("bgc.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     text-align: center;
-    background: #F4AB07;
     color: white;
     padding:10px;
     border-radius: 8px;
@@ -35,11 +38,12 @@
   .company-achievements,
   .company-contact {
     margin-top: 40px;
-    padding: 20px;
+    padding: 80px;
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
+  
   
   .service-list {
     display: flex;
@@ -67,7 +71,7 @@
   }
   
   .contact-button {
-    background-color: #0066cc;
+    background-color: #F3AB06;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -78,7 +82,7 @@
   }
   
   .contact-button:hover {
-    background-color: #004a99;
+    background-color: #b67f00;
   }
   
   .achievements-image,
