--- a/src/pages/7-fima/services.css
+++ b/src/pages/7-fima/services.css
@@ -43,7 +43,29 @@
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
-  
+.mission-image,
+.vision-image,
+.achievements-image,
+.contact-image {
+  width: 100%;
+  max-width: 800px; 
+  height: auto; /* Maintain aspect ratio */
+  margin-top: 20px;
+  margin-inline: 250px ;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Additional adjustments for smaller screens */
+@media (max-width: 768px) {
+  .mission-image,
+  .vision-image,
+  .achievements-image,
+  .contact-image {
+    margin: 0;
+  }
+}
+
   
   .service-list {
     display: flex;
