--- a/src/pages/6-contact/contact.css
+++ b/src/pages/6-contact/contact.css
@@ -1,13 +1,3 @@
-/* General styles */
-body {
-  font-family: 'Arial', sans-serif;
-  line-height: 1.6;
-  margin: 0;
-  padding: 0;
-  color: #333;
-  background-color: #f9f9f9;
-}
-
 /* Section styling */
 .contact-section {
   padding: 50px 20px;
@@ -34,7 +24,7 @@ body {
 .contact-content {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
+  gap: 10px;
   align-items: center;
   justify-content: space-between;
 }
@@ -90,10 +80,12 @@ body {
 .contact-image-container {
   flex: 1 1 45%;
   text-align: center;
+  padding-right: 100px;
 }
 
 .contact-image {
-  max-width: 100%;
+  max-width: 80% !important; 
+  
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -127,4 +119,8 @@ body {
   .contact-image {
     margin-top: 20px;
   }
+  
+.contact-image-container{
+  padding-right: 0;
+}
 }
